# sp1-solana

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md
.github/workflows/: pr.yml
example/: Cargo.toml  README.md  deploy.sh
example/elfs/: fibonacci-riscv32im-succinct-zkvm-elf  isprime-riscv32im-succinct-zkvm-elf
example/program/: Cargo.toml
example/program/src/: lib.rs
example/script/: Cargo.toml  build.rs
example/script/src/: main.rs
example/solana/: README.md  package-lock.json  package.json  pnpm-lock.yaml
example/solana/program/: Cargo.toml
example/solana/program/src/: lib.rs
example/solana/tests/: counter.test.ts  verifier.test.ts
example/solana/ts/: index.ts
example/solana/ts/instructions/: createVerifyInstruction.ts  index.ts
example/sp1-program/: Cargo.toml
example/sp1-program/elf/: riscv32im-succinct-zkvm-elf
example/sp1-program/src/: main.rs
src/: lib.rs
verifier/: Cargo.toml
verifier/src/: extract.rs  fixture.rs  lib.rs  serialize.rs  test.rs  utils.rs
