[workspace]
members = ["verifier", "example/script", "example/program", "example/sp1-program"]
resolver = "2"

[workspace.dependencies]

# workspace
sp1-solana = { path = "verifier" }
fibonacci-verifier-contract = { path = "example/program" }

# solana
solana-program = { version = "=2.1.6" }
solana-program-test = { version = "=2.1.6" }
solana-sdk = { version = "=2.1.6" }
borsh = "1.5.1"

# light protocol groth16 verifier
groth16-solana = { git = "https://github.com/sp1-patches/groth16-solana", branch = "patch-v0.0.3" }

# misc
num-bigint = "0.4.6"
num-traits = "0.2.19"
tokio = "1.40.0"
sha2 = "0.10.8"

# sp1
sp1-sdk = { version = "3.0.0" }
sp1-zkvm = { version = "3.0.0" }
sp1-build = { version = "3.0.0" }


