[package]
name = "sp1-solana"
version = "0.1.0"
edition = "2021"
authors = ["Bhargav Annem, Yuwen Zhang"]
description = "Verifier for SP1 Groth16 proofs on Solana"
license = "MIT OR Apache-2.0"
repository = "https://github.com/succinctlabs/groth16-solana"
readme = "../README.md"
keywords = ["cryptography", "zero-knowledge", "groth16", "verifier"]
categories = ["cryptography"]

[dependencies]
borsh.workspace = true
num-bigint.workspace = true
sha2.workspace = true

ark-bn254 = "0.4.0"
ark-serialize = "0.4.2"
ark-ff = "0.4.2"
groth16-solana = { git = "https://github.com/sp1-patches/groth16-solana", branch = "patch-v0.0.3" }
thiserror = "1.0.63"

[dev-dependencies]
sp1-sdk = { version = "2.0.0", default-features = false}
num-traits = { version = "0.2.19" }
