[package]
name = "example-solana-contract"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib", "lib"]

[features]
no-entrypoint = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
borsh.workspace = true
solana-program.workspace = true
sp1-solana.workspace = true

hex-literal = "0.3.1"
num-traits = "0.2.19"
num-bigint.workspace = true
