[package]
name = "example-script"
authors = ["Bhargav Annem, Yuwen Zhang"]
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
borsh.workspace = true
sp1-solana = { workspace = true, features = ["sp1-serialize"] }
example-solana-contract = { workspace = true }
solana-program-test = { workspace = true }
solana-sdk = { workspace = true }
tokio = { workspace = true }

clap = { version = "4.0", features = ["derive"] }
sp1-sdk = "2.0.0"

[build-dependencies]
sp1-build = "2.0.0"