[package]
name = "example-script"
authors = ["Bhargav Annem, Yuwen Zhang"]
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
fibonacci-verifier-contract.workspace = true
solana-program-test.workspace = true
solana-sdk.workspace = true
tokio.workspace = true

clap = { version = "4.0", features = ["derive"] }
sp1-sdk.workspace = true

[build-dependencies]
sp1-build.workspace = true