[package]
name = "example-solana-contract"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib", "lib"]

[features]
no-entrypoint = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
borsh.workspace = true
solana-program.workspace = true
bincode.workspace = true
groth16-solana.workspace = true
eyre.workspace = true
